--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="main bg-black">
         <div class="left bg-black">
+            <img src="assests/close.svg" alt="" class="close invert pointer">
             <div class="top bg-grey roboto">
                 <img class="logo invert" src="assests/logo.svg" alt="Spotify">
                 <div class="home-search">
@@ -56,8 +57,9 @@
         <div class="right bg-black">
             <div class="header flex bg-grey">
                 <div class="arrow flex">
-                    <img class="invert right-logo" src="assests/left.svg" alt="<">
-                    <img class="invert right-logo" src="assests/right.svg" alt=">">
+                    <img class="invert hamburger pointer" src="assests/hamburger.svg" alt="=">
+                    <img class="invert right-logo move" src="assests/left.svg" alt="<">
+                    <img class="invert right-logo move" src="assests/right.svg" alt=">">
                 </div>
                 <div class="sign flex">
                     <div class="signup-btn button roboto">Sign up</div>
@@ -101,6 +103,10 @@
                     </div>
                     <div class="songtime">
                         12:34/42:18
+                    </div>
+                    <div class="volume">
+                        <img src="assests/volume.svg" alt="" class="invert pointer">
+                        <input type="range" class="invert hide pointer">
                     </div>
                 </div>
                 <div class="seekbar pointer">
